--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<div class="caption">
 									<div class="title text-center">Orthodox Brick Mold</div>
 									<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
-									<p class="text-center"><a href="/img/lute.jpg" class="btn btn-info" role="button">Download .3mf</a></p>
+									<p class="text-center"><a href="/img/lute.jpg" class="btn btn-info" download="proposed_file_name" role="button">Download .3mf</a></p>
 								</div>
 						</div>
 					</div>
