--- a/index.html
+++ b/index.html
@@ -90,11 +90,16 @@
 				<!-- thumbnail 1 starts -->
 					<div class="col-sm-4">
 						<div class="thumbnail">
-								<div class="caption">
-									<div class="title text-center">Orthodox Brick Mold</div>
-									<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
-									<p class="text-center"><a href="https://spaghettinicosuave.github.io/img/lute.jpg" class="btn btn-info" download="proposed_file_name" role="button">Download .3mf</a></p>
-								</div>
+							<div class="caption">
+								<div class="title text-center">Orthodox Brick Mold</div>
+								<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
+								<a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/lute.jpg"
+								   download="proposed_file_name">
+									Download
+								</a>
+
+<!--								<p class="text-center"><a href="https://spaghettinicosuave.github.io/img/lute.jpg" class="btn btn-info" download="proposed_file_name" role="button">Download .3mf</a></p> -->
+							</div>
 						</div>
 					</div>
 				</div>
