--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 							<div class="caption">
 								<div class="title text-center">Orthodox Brick Mold</div>
 								<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
-								<a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/lute.jpg"
-								   download="proposed_file_name">
-									Download
+								<a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/OrthoBricks.3mf"
+								   download="OrthoBrick">
+									Download .3mf
 								</a>
 
 <!--								<p class="text-center"><a href="https://spaghettinicosuave.github.io/img/lute.jpg" class="btn btn-info" download="proposed_file_name" role="button">Download .3mf</a></p> -->
