--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								<div class="title text-center">Orthodox Brick Mold</div>
 								<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
 								<a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/OrthoBricks.3mf"
-								   download="OrthoBrick">
+								   download="OrthoBrick.3mf">
 									Download .3mf
 								</a>
 
