--- a/index.html
+++ b/index.html
@@ -3,126 +3,133 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Nico's Slimes'</title>
+		<title>Nico's Slimes</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-	<!-- main web title -->
+		<!-- main web title -->
 		<header class="container">
-			<h1 class="text-center fancyfont title logo"><a href="index.html">Nico's Slimes'</a></h1>
+			<h1 class="text-center fancyfont title logo"><a href="index.html">Nico's Slimes</a></h1>
 		</header>
-	<!-- main web title ends -->
-
-
-	<!-- hero begins -->
+		<!-- main web title ends -->
+		<!-- hero begins -->
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#carousel-example-generic" data-slide-to="0"></li>
-				<!--	<li data-target="#carousel-example-generic" data-slide-to="1"></li> -->
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
 			</ol>
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner text-shadow wrapper" role="listbox">
-				<div class="item active" id="guitar-background"> <!-- first slide -->
+				<div class="item active" id="guitar-background">
+					<!-- first slide -->
 				</div>
-		<!--		<div class="item positionbottom" id="drums-background"> <!-- second slide -->
+				<div class="item" id="drums-background">
+					<!-- second slide -->
+				</div>
+				<div class="item" id="headphones1-background">
+					<!-- third slide -->
 				</div>
 			</div>
+		</div>
 
-			<!-- Controls -->
-			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		<!-- Controls -->
+		<!--	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
 				<span class="glyphicon glyphicon-chevron-left hide" aria-hidden="true"></span>
 				<span class="sr-only">Previous</span>
 			</a>
 			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
 				<span class="glyphicon glyphicon-chevron-right hide" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
-			</a>
-		</div>
+			</a> -->
 		<!-- hero ends -->
-
 		<!-- main menu -->
 		<header class="container-fluid">
 			<div class="row">
-			<ul class="nav nav-tabs" id="mainmenu">
-			  <li class="active"><a href="index.html">Home</a></li> <!-- make this inactive on other pages -->
-<!--			    <ul class="dropdown-menu"> 
-			      <li><a href="#">Submenu 1-1</a></li>
-			      <li><a href="#">Submenu 1-2</a></li>
-			      <li><a href="#">Submenu 1-3</a></li>
-						<li><a href="#">Submenu 1-4</a></li>
-						<li><a href="#">Submenu 1-5</a></li>
-						<li><a href="#">Submenu 1-6</a></li>
-			    </ul> -->
-<!--			 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Brands
-				 <span class="caret"></span></a>
-				 <ul class="dropdown-menu">
-					 <li><a href="#">Submenu 1-1</a></li>
-					 <li><a href="#">Submenu 1-2</a></li>
-					 <li><a href="#">Submenu 1-3</a></li>
-					 <li><a href="#">Submenu 1-4</a></li>
-					 <li><a href="#">Submenu 1-5</a></li>
-				 </ul>
-			 </li>
-			  <li><a href="reviews.html">Reviews</a></li>
-			  <li><a href="headphones.html">Headphones</a></li>
-				<li><a href="#">Xylophones</a></li>
-				<li><a href="#">Memes</a></li>
-				<li><a href="#">Whatever</a></li> -->
-		</div>
+				<ul class="nav nav-tabs" id="mainmenu">
+					<li class="active"><a href="index.html">Home</a></li> <!-- make this inactive on other pages -->
+					<!--			    <ul class="dropdown-menu">
+								  <li><a href="#">Submenu 1-1</a></li>
+								  <li><a href="#">Submenu 1-2</a></li>
+								  <li><a href="#">Submenu 1-3</a></li>
+										<li><a href="#">Submenu 1-4</a></li>
+										<li><a href="#">Submenu 1-5</a></li>
+										<li><a href="#">Submenu 1-6</a></li>
+								</ul> -->
+					<!--			 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Brands
+								 <span class="caret"></span></a>
+								 <ul class="dropdown-menu">
+									 <li><a href="#">Submenu 1-1</a></li>
+									 <li><a href="#">Submenu 1-2</a></li>
+									 <li><a href="#">Submenu 1-3</a></li>
+									 <li><a href="#">Submenu 1-4</a></li>
+									 <li><a href="#">Submenu 1-5</a></li>
+								 </ul>
+							 </li>
+							  <li><a href="reviews.html">Reviews</a></li>
+							  <li><a href="headphones.html">Headphones</a></li>
+								<li><a href="#">Xylophones</a></li>
+								<li><a href="#">Memes</a></li>
+								<li><a href="#">Whatever</a></li> -->
+			</div>
 		</header>
 
 		<!-- main menu ends -->
-
 		<!-- featured and services begins -->
 		<div class="container">
 			<!-- featured section begins -->
-			<div class="row">
-				<div class="col-sm-7">
-					<div class="row">
-						<div class="col-sm-12">
-							<h1 class="text-uppercase">Slimes</h1>
-							<p>Just some lil slimes I been workin on a bit sticky ;)))</p>
-						</div>
-					</div>
-				<!-- thumbnail 1 starts -->
-					<div class="col-sm-4">
-						<div class="thumbnail">
-							<div class="caption">
-								<div class="title text-center">Orthodox Brick Mold</div>
-								<img src="./img/orthodoxbrick.png" class="img-fluid img-thumbnail" />
-								<a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/OrthoBricks.3mf"
-								   download="OrthoBrick.3mf">
-									Download .3mf
-								</a>
-
-<!--								<p class="text-center"><a href="https://spaghettinicosuave.github.io/img/lute.jpg" class="btn btn-info" download="proposed_file_name" role="button">Download .3mf</a></p> -->
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="row display-flex">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h1 class="text-uppercase">Slimes</h1>
+                            <p>Just some lil slimes I been workin on a bit sticky ;)))</p>
+                        </div>
+                    </div>
+                    <!-- thumbnail 1 starts -->
+                    <div class="col-sm-6">
+                        <div class="thumbnail">
+                            <div class="caption">
+                                <div class="nav-tabs text-center ">Orthodox Brick Mold</div>
+                                <img src="./img/orthodoxbrick.png" class="img-fluid img-center" />
+                                <a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/OrthoBricks.3mf" download="OrthoBrick.3mf">Download .3mf</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- thumbnail 2 starts -->
+                    <div class="col-sm-6">
+                        <div class="thumbnail">
+                            <div class="caption">
+                                <div class="nav-tabs text-center">10mm Vector mag holder</div>
+                                <img src="./img/vector10mm.png" class="img-fluid img-center" />
+                                <a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/vector.3mf" download="OrthoBrick.3mf">Download .3mf</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 			</div>
 		</div>
-		
-			<!-- featured section ends -->
+
+		<!-- featured section ends -->
+	
 
 		<!-- featured and services ends -->
 		<footer class="container-fluid">
-
 		</footer>
-			<!-- scripts -->
-		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-			<script src="js/bootstrap.min.js"></script>
-			<script type="text/javascript">
-					$(function(){
-				$('.carousel').carousel({
-				      interval: 3500
-				    });
-				$('.carousel-control.right').trigger('click');
-				});
-			</script>
+		<!-- scripts -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script type="text/javascript">
+			$(function(){
+			$('.carousel').carousel({
+			interval: 3500
+			});
+			$('.carousel-control.right').trigger('click');
+			});
+		</script>
 
 	</body>
 </html>
