--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="caption">
                                 <div class="nav-tabs text-center">10mm Vector mag holder</div>
                                 <img src="./img/vector10mm.png" class="img-fluid img-center" />
-                                <a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/vector.3mf" download="OrthoBrick.3mf">Download .3mf</a>
+                                <a class="btn btn-danger" role="button" href="https://spaghettinicosuave.github.io/img/vector.3mf" download="vector.3mf">Download .3mf</a>
                             </div>
                         </div>
                     </div>
